# NSQCuC

./: CMakeLists.txt  build.ps1  enT.sh  updateConfigs.sh  vcpkg.json
.github/workflows/: windows-build.yml
resources/: app.rc  index.html  ipc-bridge.js  renderer.js
src/: addonmanager.cpp  addonmanager.h  backend.cpp  backend.h  gamelauncher.cpp  gamelauncher.h  main.cpp  settings.cpp  settings.h
